gitops/app/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      serviceAccountName: backend-sa

      containers:
        - name: backend
          image: 905179308072.dkr.ecr.ap-south-1.amazonaws.com/file-storage-backend@sha256:7e3c609f763edaa0cf9abe93a74bd8aefd80e89f73e6f3c966f2829275422f17

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
