gitops/app/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: backend-ingress

  annotations:
    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:905179308072:certificate/d99709d8-965c-46d2-91cd-c83d4da68a28

    alb.ingress.kubernetes.io/ssl-redirect: '443'

spec:
  rules:
    - host: api.maheshmaharana.online

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: backend-service

                port:
                  number: 80
